# notes

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  REFACTORING_SUMMARY.md  opencode-backend-api.md  package.json  pnpm-lock.yaml  test-tree.ts  tsconfig.json  turbo.json
.agelum/: config.json
.agelum/ai/skills/: agent-browser.md
.agelum/cache/: favicons.json
.agelum/doc/docs/: test-step-types.md
.agelum/tests/: index.json
.agelum/work/docs/: auto-linking-implementation.md
.agelum/work/plans/: 26_02_13-185941-UI-Fixes-1771020028129.md  agent-tool-settings-1770906630387.md  auto-save-summary-1770740774222.md  auto-save-summary-1770741598559.md  auto-save-summary.md  (+8 more)
.github/workflows/: docker-site.yml
.trae/documents/: Improve Prompt Area UI and Functionality.md
agelum-test/: .agelum-tests-setup.json  package.json
agelum-test/tests/: example.ts
apps/chrome-plugin/: manifest.json  package.json  tailwind.config.js  vite.config.ts
apps/electron/: electron-builder.yml  package.json
apps/site/: Dockerfile  package.json  tsconfig.tsbuildinfo
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.mcp.json
cli/: Cargo.toml  README.md  REFACTORING.md  STRUCTURE.md  TESTS_AND_BROWSER.md
cli/src/: main.rs  types.rs
cli/src/commands/: browser.rs  create.rs  delete.rs  list.rs  list_repos.rs  mod.rs  modify_ai.rs  move.rs  read.rs  start_ai.rs  test_add_step.rs  test_executions.rs  test_finish.rs  test_run.rs  test_steps.rs  write.rs
scripts/: electron-docker-build.sh  publish-all.sh
(+313 files in other folders)
